--- a/temporal_correlation_Wk3.ipynb
+++ b/temporal_correlation_Wk3.ipynb
@@ -347,6 +347,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Auto Correlation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -432,6 +439,13 @@
     "        plt.figure(figsize=(8, 4))\n",
     "        class_df[column].plot(title=f'Autocorrelation - Class: {class_name}, Variable: {column}, Autocorrelation: {autocorrelation:.2f}')\n",
     "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Cross Correlation.**"
    ]
   },
   {
@@ -525,6 +539,19 @@
     "                plt.show()\n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see the normalized cross correlation plots for each feature between the 2 classes we have. X-axis values represent the time lags which are the indices of the calculated correlation values.\n",
+    "\n",
+    "To get an idea of these time lags with respect to the timeframe we have, we need to multiply the lag values with the time intervals we have in our time series dataset.\n",
+    "\n",
+    "For example, lets take a time lag of 10000. our dataset follows the 12 minute time interval; so we multiply the lag value with this interval to get the interpretation in terms of the time frame we have.\n",
+    "\n",
+    "THis way we can see the time lags in terms of the time interval we have."
    ]
   },
   {
